# ai-search

./: .env.example  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.md
.copilot-tracking/changes/2026-02-26/: ai-search-pipeline-changes.md  fix-image-embedding-client-changes.md  multimodal-embeddings-changes.md  review-rework-changes.md
.copilot-tracking/details/2026-02-26/: ai-search-pipeline-details.md  fix-image-embedding-client-details.md  multimodal-embeddings-details.md  review-rework-details.md
.copilot-tracking/plans/2026-02-26/: ai-search-pipeline-plan.instructions.md  fix-image-embedding-client-plan.instructions.md  multimodal-embeddings-plan.instructions.md  review-rework-plan.instructions.md
.copilot-tracking/research/2026-02-26/: ai-search-pipeline-research.md  embedding-vector-correctness-research.md  model-strategy-index-config-research.md  review-rework-major-findings-research.md
data/: sample_images.json
docs/: architecture.md  image-indexing-process.md  learnings-image-embedding-fix.md  search-process.md
scripts/: analyze_scores.py  debug_image_search.py  fix_pth_flags.sh  generate_ramayana_images.py  ingest_samples.py  retry_failed.py  setup_azure.sh  test_hybrid_vs_image.py  test_image_embed.py  test_image_search.py  test_inference_sdk.py  test_relevance.py  test_relevance_tiers.py  test_search.py
src/ai_search/: __init__.py  clients.py  config.py  models.py
tests/: conftest.py  test_config.py  test_models.py
tests/test_embeddings/: __init__.py  test_encoder.py  test_image.py  test_pipeline.py
tests/test_extraction/: __init__.py  test_extractor.py
tests/test_indexing/: __init__.py  test_indexer.py  test_schema.py
tests/test_integration/: __init__.py  conftest.py  test_end_to_end.py
tests/test_retrieval/: test_query.py  test_search.py
(+62 files in other folders)
